firewall.txt
# Generated by iptables-save v1.6.1 on Sun Feb 23 14:50:12 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 5/min -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 193.190.67.98/32 -p tcp -m tcp --dport 80 -j ACCEPT    
COMMIT
# Completed on Sun Feb 23 14:50:12 2020
#ip adres van belnet (be.archive.ubuntu.com)
